css/styles.css
/* ... */
@media print {
  .d-print-inline {
    display: inline !important;
  }
  .d-print-inline-block {
    display: inline-block !important;
  }
  .d-print-block {
    display: block !important;
  }
  .d-print-grid {
    display: grid !important;
  }
  .d-print-table {
    display: table !important;
  }
  .d-print-table-row {
    display: table-row !important;
  }
  .d-print-table-cell {
    display: table-cell !important;
  }
  .d-print-flex {
    display: flex !important;
  }
  .d-print-inline-flex {
    display: inline-flex !important;
  }
  .d-print-none {
    display: none !important;
  }
}
body {
  padding-top: 3.375rem;
  color: #686868;
  width: 100%;
}

@media (min-width: 992px) {
  body {
    padding-top: 0;
    padding-left: 17rem;
  }
}
h1, .h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
  /* text-transform: capitalize; */
}

h1, .h1 {
  line-height: 1.5;
}

p.lead {
  font-size: 22px;
  font-weight: 400;
}

.subheading {
  font-family: var( --bs-body-font-family);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.5rem;
}

#sideNav {
  padding-left: 1rem;
  padding-right: 1rem;
}
#sideNav .navbar-nav .nav-item .nav-link {
  letter-spacing: 0.05rem;
  text-transform: capitalize;
}
#sideNav .navbar-toggler:focus {
  outline-color: #d48a6e;
}

@media (min-width: 992px) {
  #sideNav {
    padding-left: 2rem;
    padding-top: 2rem;
    padding-right: 0;
    padding-bottom: 2rem;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    width: 17rem;
    height: 100vh;
    background-color: revert;
  }
  #sideNav .navbar-brand {
    display: flex;
    margin: 0 0 12px 0;
    padding: 0.5rem;
  }
  #sideNav .navbar-brand .img-profile {
    max-width: 10rem;
    max-height: 10rem;
    border: 0.5rem solid rgba(255, 255, 255, 0.2);
  }
  #sideNav .navbar-collapse {
    display: flex;
    align-items: flex-start;
    flex-grow: 0;
    width: 100%;
    margin-bottom: auto;
  }
  #sideNav .navbar-collapse .navbar-nav {
    flex-direction: column;
    width: 100%;
  }
  #sideNav .navbar-collapse .navbar-nav .nav-item {
    display: block;
  }
  #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
    display: block;
  }
  #sideNav .navbar-collapse-1 {
    display: flex;
    align-items: flex-start;
    flex-grow: 0;
    width: 100%;
    /* margin-bottom: auto; */
  }
  #sideNav .navbar-collapse-1 .navbar-nav {
    flex-direction: column;
    width: 100%;
  }
  #sideNav .navbar-collapse-1 .navbar-nav .nav-item {
    display: block;
  }
  #sideNav .navbar-collapse-1 .navbar-nav .nav-item .nav-link {
    display: block;
  }
}

.social-icons {
  position: fixed;
  bottom: 0;
  margin-bottom: 2rem;
}

.social-icons svg {
  width: 1.8rem;
}

.social-icons .social-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 3.5rem;
  width: 3.5rem;
  /* background-color: #495057; */
  color: #000;
  border-radius: 100%;
  font-size: 1.8rem;
  transition: transform .5s ease;
}
.social-icons .social-icon:last-child {
  margin-right: 0;
}
.social-icons .social-icon:hover {
  color: #23a6d5;
  transform: scale(1.2);
}

@media (max-height:500px){
  #sideNav .navbar-collapse .navbar-nav.social-icons-flex-direction{
    display: flex;
    flex-direction: row;
  }
}
.dev-icons {
  font-size: 3rem;
}

p.text-length-6 {
  width: 60%;
}

section.about-me-section {
  position: absolute;
  display: flex;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  /* padding-top: 20px; */
  padding-bottom: 5rem;
  /* height: 300px; */
  max-width: 1280px;
  overflow: hidden;
  margin-top: 60vh;
  flex-direction: column;
}

@media (min-width: 992px) {
  section.about-me-section {
    position: absolute;
    display: flex;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
    /* padding-top: 20px; */
    padding-bottom: 5rem;
    /* height: 300px; */
    max-width: 1280px;
    overflow: hidden;
    margin-top: 400px;
    flex-direction: column;
    padding-left: 3rem;
    padding-right: 3rem;
    /* padding-top: 10rem; */
    /* padding-bottom: 5rem; */
  }
}
section.personal-section {
  position: absolute;
  display: flex;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 5rem;
  padding-bottom: 5rem;
  max-width: 100%;
  width: 99%;
  height: 300px;
}

/* @media (min-width: 768px) {
  section.resume-section {
    min-height: 100vh;
  }
} */
@media (min-width: 992px) {
  section.personal-section {
    /* padding-left: 3rem; */
    /* padding-right: 3rem; */
    padding-top: 10rem;
    /* padding-bottom: 5rem; */
  }
}

@media (max-width: 768px) {
  section.personal-section {
    height: 450px;
  }
}

@media (min-width: 768px) {
  section.personal-section{
    width: 45rem;
  }
}

@media (min-width: 2560px) {
  section.personal-section{
    width: 55rem;
  }
}



@media (max-width: 991px) {
  .container.mobile-view-container{
    margin: 0;
    width: 100%;
    padding: 0;
    overflow: hidden;
  }
  .container.mobile-view-container-project{
    width: 100%;
    padding: 1rem;
  }
}


section.project-section {
  margin-top: 330px;
  position: absolute;
  display: flex;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  max-width: 1280px;
  width: 99%;
  /* padding-top: 5rem; */
  /* padding-bottom: 5rem; */
}

.intro-description{
  width: 43rem;
}

@media (min-width: 992px) {
  section.project-section {
    /* padding-left: 3rem; */
    /* padding-right: 3rem; */
    /* padding-top: 5rem; */
    /* padding-bottom: 5rem; */
  }
}

@media (max-width: 768px) {
  section.project-section {
    margin-top: 450px;
  }
}

@media (min-width: 2560px) {
  .intro-description {
    width: 55rem;
  }
}

@media (max-width: 768px) {
  .intro-description {
    width: 100%;
  }
}
/* ... */

